# cmd/inpatient-api-service/main.go
@@ -5,8 +5,13 @@ import (
 	"os"
 	"strings"
 
+	"context"
+	"time"
+
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	"github.com/martinrudy/inpatient-webapi/api"
+	"github.com/martinrudy/inpatient-webapi/internal/db_service"
 	"github.com/martinrudy/inpatient-webapi/internal/inpatient_wl"
 )
 
@@ -22,6 +27,23 @@ func main() {
     }
     engine := gin.New()
     engine.Use(gin.Recovery())
+    corsMiddleware := cors.New(cors.Config{
+        AllowOrigins:     []string{"*"},
+        AllowMethods:     []string{"GET", "PUT", "POST", "DELETE", "PATCH"},
+        AllowHeaders:     []string{"Origin", "Authorization", "Content-Type"},
+        ExposeHeaders:    []string{""},
+        AllowCredentials: false,
+        MaxAge: 12 * time.Hour,
+    })
+    engine.Use(corsMiddleware)
+
+    // setup context update  middleware
+    dbService := db_service.NewMongoService[inpatient_wl.Ambulance](db_service.MongoServiceConfig{})
+    defer dbService.Disconnect(context.Background())
+    engine.Use(func(ctx *gin.Context) {
+        ctx.Set("db_service", dbService)
+        ctx.Next()
+    })
     // request routings
     inpatient_wl.AddRoutes(engine)
     engine.GET("/openapi", api.HandleOpenApi)
