# internal/inpatient_wl/model_ambulance.go
@@ -1,0 +1,22 @@
+/*
+ * Waiting List Api
+ *
+ * Ambulance Waiting List management for Web-In-Cloud system
+ *
+ * API version: 1.0.0
+ * Contact: rudolfmato@gmail.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package inpatient_wl
+
+type Ambulance struct {
+
+	// Unique identifier of the ambulance
+	Id string `json:"id"`
+
+	// Human readable display name of the ambulance
+	Name string `json:"name"`
+
+	WaitingList []WaitingListEntry `json:"waitingList,omitempty"`
+}
